jwon errors handling